# fabric-iska2025

./: README.md  demo1.sh  demo2.sh  demo3.sh  fab_demo.md
.devcontainer/: Dockerfile  devcontainer.json
fabric-workspace/: Readme.md  parameter.yml
fabric-workspace/DP_Ingestion.DataPipeline/: .platform  pipeline-content.json
fabric-workspace/ENV_Environment.Environment/: .platform
fabric-workspace/ENV_Environment.Environment/Libraries/CustomLibraries/: iska_python_project-0.2.1-py3-none-any.whl  iska_python_project-0.2.3-py3-none-any.whl  iska_python_project-0.2.6-py3-none-any.whl  iska_python_project-0.2.8-py3-none-any.whl
fabric-workspace/LH_ISKADemo.Lakehouse/: .platform
fabric-workspace/NB_Notebook.Notebook/: .platform  notebook-content.py
iska_python_project/: deploy_fabric1.py  deploy_fabric2.py  main.py  pyproject.toml
iska_python_project/cicd/: deploy_fabric_demo1.py  deploy_fabric_demo2.py  deploy_fabric_demo3.py  parameter_demo3.yml
iska_python_project/iska_python_project/greeters/: hello_word.py
