[project]
name = "iska-python-project"
version = "0.2.8"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
[project.optional-dependencies]
dev =  [
    "azure-identity-broker>=1.3.0",
    "fabric-cicd>=0.1.25",
    "ms-fabric-cli>=1.0.1",
    "ruff>=0.12.11",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["iska_python_project*"]
